# fabric-cli

./: POSIX_IMPLEMENTATION_SUMMARY.md  README.md  azure-pipelines.yml  pyproject.toml  report.md  report2.md  requirements-dev.txt
.changes/unreleased/: fixed-20260310-140441.yaml  new-items-20260322-151855.yaml  new-items-20260331-075150.yaml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature.yml  3-question.yml
.github/agents/: new-item-type.agent.md
.github/policies/: resourceManagement.yml
.github/prompts/: bug-triage.prompt.yml  feature-triage.prompt.yml  question-triage.prompt.yml
.github/scripts/: get_version_info.py  increment_version.py  update_files.py
.github/workflows/: ai-issue-triage-agent.yml  ai-issue-triage.yml  build.yml  fab-build.yml  lint.yml  pr-title-feedback.yml  pr-title-validation.yml  semantic-pr.yml  semantic-pull-request.yml  test.yml  type-check.yml  version-bump.yml
docs/: POSIX_COMPLIANCE.md  POSIX_DESIGN_ARCHITECTURE.md  performance-findings.md  troubleshooting.md
docs/design/: interactive-mode-login-experience.md
docs/essentials/: cache.md  hierarchy.md  resource_types.md  settings.md
docs/examples/: config_examples.md  item_examples.md  job_examples.md
docs/migration/: azure-identity-migration.md
docs/proposals/: 001-typer-migration-rfc.md  002-rust-migration-rfc.md
scripts/: ai_triage.py  benchmark_startup.py
src/fabric_cli/: __init__.py  __main__.py  main.py
src/fabric_cli_v2/: __init__.py  app.py  auth.py  client.py  config.py  context.py  output.py  repl.py  types.py  validator.py
tests/: conftest.py  test_posix_compliance.py
tests/test_commands/: conftest.py  test_acls.py  test_api.py  test_assign.py  test_auth.py  test_config.py  test_cp.py  test_cp_local.py  test_export.py  test_get.py  test_import.py  test_jobs.py  test_labels.py  test_ls.py  test_mkdir.py  test_mv.py  test_rm.py  test_unassign.py
tests/test_core/: test_context_persistence.py  test_fab_auth.py  test_fab_command_validator.py  test_fab_context.py  test_fab_fs_mv_folder.py  test_fab_hiearchy.py  test_fab_interactive.py  test_fab_logger.py  test_fab_state_config.py  test_format_mapping.py  (+4 more)
(+228 files in other folders)
